tests/syntax_error/mismatched_close_brace.jou
def foo(} -> None:   # Error: '}' without a matching '{'
